ch03/3.3.3/react-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx   # ingress controller 종류에 따라 다름
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - react.example.com     # 사용하려는 도메인
      secretName: react-tls     # 위에서 만든 Secret 이름
  rules:
    - host: react.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app
                port:
                  number: 80
